<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_views"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText_login_username"
        android:hint="@string/editText_login"
        android:padding="@dimen/padding_editTexts"
        android:layout_margin="@dimen/margin_views"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText_login_password"
        android:hint="@string/editText_password"
        android:padding="@dimen/padding_editTexts"
        android:layout_margin="@dimen/margin_views"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView_regLink"
        android:layout_gravity="center_horizontal"
        android:text="@string/textView_regLink"
        android:padding="@dimen/padding_editTexts"
        android:layout_margin="@dimen/margin_views"
        android:onClick="onClickRegLink"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="@dimen/padding_button"
        android:id="@+id/button_login"
        android:onClick="onClickButtonLogin"
        android:layout_margin="@dimen/margin_views"
        android:text="@string/button_login"/>
</LinearLayout>