<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText_reg_username"
        android:hint="@string/editText_login"
        android:padding="@dimen/padding_editTexts"
        android:layout_margin="@dimen/margin_views"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText_reg_password"
        android:inputType="textPassword"
        android:hint="@string/editText_password"
        android:padding="@dimen/padding_editTexts"
        android:layout_margin="@dimen/margin_views"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText_reg_name"
        android:hint="@string/editText_reg_name"
        android:padding="@dimen/padding_editTexts"
        android:layout_margin="@dimen/margin_views"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="You are a ?"
            android:padding="@dimen/padding_editTexts"
            android:layout_margin="3dp"/>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            android:id="@+id/radioGroup">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_margin="3dp"
                android:checked="false"
                android:id="@+id/radiobtn_user"
                android:text="User"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_margin="3dp"
                android:checked="false"
                android:id="@+id/radiobtn_doc"
                android:text="Doctor"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_margin="3dp"
                android:checked="false"
                android:id="@+id/radiobtn_ph"
                android:text="Pharmacist"/>
        </RadioGroup>
    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText_reg_pincode"
        android:hint="@string/editText_reg_pincode"
        android:padding="@dimen/padding_editTexts"
        android:layout_margin="@dimen/margin_views"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText_reg_desc"
        android:hint="@string/editText_reg_desc"
        android:padding="@dimen/padding_editTexts"
        android:layout_margin="@dimen/margin_views"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/textView_loginLink"
        android:text="@string/textView_loginLink"
        android:padding="@dimen/padding_editTexts"
        android:layout_margin="@dimen/margin_views"
        android:onClick="onClickLoginLink"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="@dimen/padding_button"
        android:id="@+id/button_reg"
        android:onClick="onClickButtonRegister"
        android:layout_margin="@dimen/margin_views"
        android:text="@string/button_register"/>

</LinearLayout>

</ScrollView>